src/style.css
body {
    box-sizing: border-box;
    height: 100vh;
    margin: 0;
}

body, button, input[type="date"], textarea {
    font-family: -apple-system, BlinkMacSystemFont, avenir next, 
        avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, 
        roboto, noto, arial, sans-serif;
}

/* Animation fade-in from https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/ */
@keyframes fadeInAnimation {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
     }
}
.container, main > * {
    animation: fadeInAnimation ease 1s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}


.add-new, .list.options {
    margin-top: 1rem;
}

button, input[type="submit"] {
    border-radius: 10px;
    padding: 0.5rem 1rem;
}

/* Button class styles */
.primary {
	background-color:rgb(4, 145, 192);
	border:1px solid #037499;
	cursor:pointer;
	color:#ffffff;
}
.primary:hover {
	background-color:#067ea3;
}

.secondary {
    border: 1px solid gray;
    cursor: pointer;
}
.secondary:hover {
    background: rgb(219, 219, 219);
}

.primary:active, .secondary:active {
	position:relative;
	top:1px;
}
/* end Button class styles */

.container {
    display: grid;
    grid-template-columns: min(30%,10rem) 1fr;
    height: 100%;
}

.done {
    text-decoration: line-through;
}

/* This allows the user to click on the date div to expand details 
   even when the date div is empty */
.due.summary {
    min-height: 20px;
}

.edit-todo {
    grid-column: 2 / 4;
    margin-bottom: 1rem;
    padding: 0;
}

.form-field, .todo-property {
    display: grid;
    grid-template-columns: minmax(50px, 15rem) minmax(25px, 9rem);
    margin-bottom: 1rem;
}

form#add-new-item {
    max-width: 85%;
}

#add-new-item .form-field {
    margin-left: 1rem;
}

input[type="text"], input[type="date"], select, textarea {
    font-size: 1rem;
    padding: 0.25rem;
}

input.title {
    margin-right: 1rem;
}

input.title, input.due {
    margin-bottom: 0.5rem;
} 

li {
    list-style: none;
}

.lists li {
    cursor: pointer;
    font-size: 1.5rem;
    padding: 1rem 0;
}

main {
    background: white;
    color: #00181C;
}

main > * {
    margin-bottom: 1rem;
}

/* This padding provides the left alignment of elements in main 
   while allowing the todo item hover background color to extend to the edge */
main h1, main > div, .todos li, .lists li, #add-new-item {
    padding-left: 2rem;
}

nav {
    background: #00181C;
}

nav ul {
    color: #e8e8e8;
    cursor: pointer;
    display: grid;
    font-size: 1.1rem;
    margin-top: 3rem;
    width: 100%;
}

nav ul li {
    padding: 1rem 0 1rem 1rem;
}

nav ul li:hover, nav ul li.active {
    background: rgb(4, 145, 192);
}

.options button, #add-new-item input[type="submit"], .edit-todo button {
    margin-right: 0.5rem;
}

.priority-icon {
    max-width: 24px;
}

.todos li {
    align-items: center;
    display: grid;
    grid-template-columns: 1.75rem minmax(50px, 15rem) minmax(25px, 9rem) 2rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.todos li.active .summary {
    font-weight: 700;
}

.todos li.collapsed:hover, .lists li:hover {
    background: #f1efef;
}

.todos .summary {
    cursor: pointer;
}

.todo-details {
    grid-column: 2 / 4;
    margin: 1rem 0;
    padding-bottom: 1rem;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.5s ease-in;
}

.todo-details .list .clickable {
    cursor: pointer;
    color: rgb(4, 145, 192);
    text-decoration: underline;
}

ul {
    margin: 0;
    padding: 0;
}


/* Styles for smaller screens */
@media screen and (max-width: 690px) {
    .container {
        grid-template-columns: 1fr;
        height: auto;
    }

    nav ul {
        grid-template-columns: repeat(3, 1fr);
        margin-top: 0;
    }

    main h1, main > div, .todos li, .lists li, #add-new-item {
        padding: 0 1rem 0 1rem;
    }
}

